# betrusted-soc

./: .gitignore  .gitmodules  README.adoc  betrusted-soc.py  build-docs.sh  lxbuildenv.py
firmware/: Makefile  isr.c  linker.ld  main.c
gateware/: VexRiscv_HaD_Debug.v  aes_reg_litex.sv  keyboard.py  memlcd.py  pwm.py  rtl_i2c.py  spi.py  spinor.py  sram_32.py  ticktimer.py
gateware/i2c/: core.py
gateware/info/: __init__.py
gateware/trng/: ring_osc.py
sim/: glbl.v  lxbuildenv_sim.py
sim/bios/: Makefile  common.mak  linker.ld  main.c
sim/kbd/: sim_kbd.py
sim/memlcd/: sim_memlcd.py
sim/spi/: sim_spi.py
sim/spiflash/: sim_spiflash.py
sim/spiflash/MX66UM1G45G/: MX66UM1G45G.v
sim/sram32/: sim_sram32.py
sw/: Cargo.toml  memory.x  rebuild-pac.sh
sw/.cargo/: config
sw/alloc-riscv/: Cargo.toml
sw/alloc-riscv/src/: lib.rs  mutex.rs
sw/betrusted-hal/: Cargo.toml
sw/betrusted-hal/src/: hal_com.rs  hal_i2c.rs  hal_kbd.rs  hal_lcd.rs  hal_time.rs  hal_uart.rs  hal_xadc.rs  lib.rs
sw/efuse-api/src/: lib.rs
sw/efuse-api/tests/: jtag_tests.rs
sw/efuse-ecc/src/: lib.rs
sw/jtag/: Cargo.toml
sw/jtag/src/: lib.rs
sw/linked-list-allocator/: Cargo.toml
sw/linked-list-allocator/src/: lib.rs
sw/src/: jtag.rs  main.rs
sw/xous-nommu/src/: irq.rs  syscalls.rs
