[package]
authors = ["bunnie <bunnie@kosagi.com>"]
edition = "2018"
readme = "README.md"
name = "betrusted-soc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.5.4"
riscv-rt = "0.6.1"
betrusted-pac = { path = "betrusted-pac" }
betrusted-hal = { path = "betrusted-hal" }
alloc-riscv = { path = "alloc-riscv" }

# this lets you use `cargo fix`!
[[bin]]
name = "betrusted-soc"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
